modify findbugs issue
Match-id-2c8d0254fe69cba42298c7e3a21e376820ecfbab